--- a/Homework_03-27.Web/Views/Home/Index.cshtml
+++ b/Homework_03-27.Web/Views/Home/Index.cshtml
@@ -5,6 +5,15 @@
 <div class="container">
     <main role="main" class="pb-3">
         <div class="row">
+            @if(!String.IsNullOrEmpty(Model.Message))
+            {
+                <div class="col-md-12">
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        @Model.Message
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"label></button>
+                    </div>
+                </div>
+            }
             <div class="col-md-12">
                 <a href="/home/add" class="btn btn-outline-dark">Add Person</a>
                 <table class="table table-hover table-borderless mt-4">
